# grid-scout

./: .gitignore  LICENSE  PLAN.md  PROJECT.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pipeline.yml
data/: forecast_generation_total.parquet  forecast_solar.parquet  forecast_wind_offshore.parquet  forecast_wind_onshore.parquet  gen_biomass.parquet  gen_gas.parquet  gen_hard_coal.parquet  gen_hydro.parquet  gen_lignite.parquet  gen_nuclear.parquet  gen_other_conventional.parquet  gen_other_renewable.parquet  gen_pumped_storage.parquet  gen_solar.parquet  gen_wind_offshore.parquet  gen_wind_onshore.parquet  load.parquet  price_day_ahead.parquet  residual_load.parquet
reports/: agent_eval.json  battery_backtest.json  battery_daily.parquet  forecast_eval.json  predictions.parquet
site/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
site/public/data/: agent.json  battery.json  forecast.json  health.json  market.json
site/src/: App.tsx  theme.css  types.ts
site/src/charts/: LineChart.tsx  StackedArea.tsx  scale.test.ts  scale.ts
site/src/lib/: useData.ts
src/gridscout/: cli.py  export.py
src/gridscout/agent/: evaluation.py  loop.py  server.py  tools.py
src/gridscout/battery/: backtest.py  schedule.py
src/gridscout/forecast/: evaluate.py  features.py  metrics.py  models.py  walkforward.py
tests/: conftest.py  test_agent_eval.py  test_agent_tools.py  test_battery.py  test_client.py  test_export.py  test_features.py  test_forecast_eval.py  test_ingest.py  test_validate.py
(+4 files in other folders)
